# manifesto

./: .gitignore  CMakeLists.txt  manifesto.cpp
